
version 1.2.3 (cvs)
	
	- building against meanwhile 0.4.2
	
	- added support for privacy (allow all, allow list, deny all, deny
	list, allow buddy list) from RFE #1054813

	- fix #1194631 Windows file transfer crashes gaim
	
	- fix #1178603 crash on duplicate ldap entries (add buddy)

	- added "Invite to Conference..." context menu
	
version 1.2.2 (2005-05-02)

	- fix #1193994 startup crash, whitespace status messages
	
version 1.2.1 (2005-05-01)

	- building against meanwhile 0.4.1

	- removed username split for Server, moving it back to an account
	setting. This should fix log location the way it was pre-1.2.0

	- support for sending NotesBuddy-style images
	
	- support for sending/receiving files over the File Transfer
	service
	
	- added "Supports" section to tooltip text for buddies, displaying
	A/V and File Transfer capabilities
	
	- fix #1185763 gaim-meanwhile 1.2.0 not showing Notesbuddy
	messages

	- added context menu item for NAB groups
	
	- differentiate between read-callback disconnect codes
	
	- support for adding, loading, saving Notes Address Book groups
	
	- quiet down error messages when the other end of a conversation
	logs off. Only display when there are still unsent messages in the
	conversation queue
	
	- added support for sending the LoginCont message when the server
	issues a LoginRedirect if the redirect connect fails

	- added a plugin option to always LoginCont and never attempt a
	redirected login
	
	- fixed a problem with moving buddies between groups that would
	cause the change not to be saved.

	- changed the active/away/busy messages dialog to only allow
	single-line messages, to prevent problems when the messages are
	saved to the storage service (and possibly loaded by another
	client, which doesn't permit multi-line messages). Custom away
	messages may still be multi-line

	- Get Info for buddies in the blist is functional
	
version 1.2.0 (2005-03-18)

        - building against meanwhile 0.4.0

	- building against gaim 1.2.0
